// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets created gets clicked matches the snapshot 1`] = `
<li
  className="tag tag--selected"
>
  <label
    className="tag-content"
    htmlFor="ux-input"
    id="ux-tag"
    onClick={[Function]}
  >
    <input
      id="[object Object]-input"
      type="checkbox"
    />
    ux
  </label>
</li>
`;

exports[`gets created matches the snapshot 1`] = `
<li
  className="tag "
>
  <label
    className="tag-content"
    htmlFor="ux-input"
    id="ux-tag"
    onClick={[Function]}
  >
    <input
      id="[object Object]-input"
      type="checkbox"
    />
    ux
  </label>
</li>
`;
